[package]
name = "newdtw"
version = "1.0.0"
description = "newDTW — Diavolo The Wanderer (Tauri shell)"
authors = ["zawatton"]
license = "CC0-1.0"
repository = "https://github.com/zawatton/newDTW.github.io"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
